tests/snapshots/examples_fixtures/suggestions__prefix_match.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/suggestions/prefix_match.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `conf`.

  --> examples/suggestions/prefix_match.flx:8:7
  |
8 | print(conf);
  |       ^^^^

Hint:
  Define it first: let conf = ...;


Help:
  Did you mean one of: `config`, `configured`, `configuration`?
== stdout ==
<not executed>
